2014-08-01  Renato Nagy  <nagy.renato@stud.u-szeged.hu>

        ASSERTION FAILED: listNode in WebCore::RenderListItem::updateListMarkerNumbers
        https://bugs.webkit.org/show_bug.cgi?id=134970

        Reviewed by Zalan Bujtas.

        Removed an unnecessary assert, because the null return value of enclosingList() is
        handled properly after this assert.

        * rendering/RenderListItem.cpp:
        (WebCore::RenderListItem::updateListMarkerNumbers):

2014-08-01  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Replace DEPRECATED_DEFINE_STATIC_LOCAL with NeverDestroyed<T> in NavigatorContentUtils
        https://bugs.webkit.org/show_bug.cgi?id=135494

        Reviewed by Andrei Bucur.

        Use static NeverDestroyed<T> variables instead of the DEPRECATED_DEFINE_STATIC_LOCAL macro.

        No new tests, no behavior changes.

        * Modules/navigatorcontentutils/NavigatorContentUtils.cpp:
        (WebCore::customHandlersStateString):
        (WebCore::NavigatorContentUtils::isProtocolHandlerRegistered):

2014-07-31  Benjamin Poulain  <bpoulain@apple.com>

        Remove shadowPseudoId() override from the shadow media controls
        https://bugs.webkit.org/show_bug.cgi?id=135474

        Reviewed by Eric Carlson.

        Small cleanup.

        * html/shadow/MediaControlElementTypes.h:
        * html/shadow/MediaControlElements.cpp:
        (WebCore::MediaControlPanelElement::MediaControlPanelElement):
        (WebCore::MediaControlPanelEnclosureElement::MediaControlPanelEnclosureElement):
        (WebCore::MediaControlOverlayEnclosureElement::MediaControlOverlayEnclosureElement):
        (WebCore::MediaControlTimelineContainerElement::MediaControlTimelineContainerElement):
        (WebCore::MediaControlVolumeSliderContainerElement::MediaControlVolumeSliderContainerElement):
        (WebCore::MediaControlStatusDisplayElement::MediaControlStatusDisplayElement):